--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,8 @@ tauri-build = {version = "1.0.4", features = [] }
 
 [dependencies]
 anyhow = "1.0"
+log = {version = "0.4", default-features = false}
+pretty_env_logger = {version = "0.4", default-features = false}
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 smol = "1"
