--- a/package.json
+++ b/package.json
@@ -31,16 +31,20 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
+		"svelte": "^3.54.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.0"
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"daisyui": "^2.20.0"
+		"@twurple/api": "^5.3.4",
+		"@twurple/auth": "^5.3.4",
+		"@twurple/chat": "^5.3.4",
+		"daisyui": "^2.20.0",
+		"svelte-scrollto-element": "^0.7.0"
 	}
 }
