--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
 		"@sveltejs/kit": "^1.7.2",
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
 		"@typescript-eslint/parser": "^5.52.0",
+		"autoprefixer": "^10.4.13",
 		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.21",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.3",
+		"tailwindcss": "^3.2.7",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.1.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"elizabot": "^0.0.3"
+	}
 }
