--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@steeze-ui/heroicons": "^2.2.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.7.2",
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -32,9 +33,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@steeze-ui/svelte-icon": "^1.3.2",
 		"@twurple/api": "^6.0.0",
 		"@twurple/auth": "^6.0.0",
 		"@twurple/chat": "^6.0.0",
+		"daisyui": "^2.50.1",
 		"elizabot": "^0.0.3"
 	}
 }
