--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@steeze-ui/heroicons": "^2.2.1",
+		"@steeze-ui/heroicons": "^2.2.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.7.2",
-		"@typescript-eslint/eslint-plugin": "^5.52.0",
-		"@typescript-eslint/parser": "^5.52.0",
+		"@sveltejs/kit": "^1.10.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.34.0",
+		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
+		"svelte-check": "^3.0.4",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"vite": "^4.1.2"
+		"vite": "^4.1.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@steeze-ui/svelte-icon": "^1.3.2",
-		"@twurple/api": "^6.0.0",
-		"@twurple/auth": "^6.0.0",
-		"@twurple/chat": "^6.0.0",
-		"daisyui": "^2.50.1",
-		"elizabot": "^0.0.3"
+		"@twurple/api": "^6.0.6",
+		"@twurple/auth": "^6.0.6",
+		"@twurple/chat": "^6.0.6",
+		"daisyui": "^2.51.3",
+		"elizabot": "^0.0.3",
+		"theme-change": "^2.5.0"
 	}
 }
