--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 		"@steeze-ui/heroicons": "^2.2.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.10.0",
-		"@typescript-eslint/eslint-plugin": "^5.54.0",
-		"@typescript-eslint/parser": "^5.54.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.35.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-prettier": "^8.7.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.4",
@@ -37,6 +37,7 @@
 		"@twurple/api": "^6.0.6",
 		"@twurple/auth": "^6.0.6",
 		"@twurple/chat": "^6.0.6",
+		"@twurple/common": "^6.0.6",
 		"daisyui": "^2.51.3",
 		"elizabot": "^0.0.3",
 		"theme-change": "^2.5.0"
