--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@steeze-ui/heroicons": "^2.2.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.13.0",
+		"@sveltejs/kit": "^1.14.0",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.14",
@@ -22,7 +22,7 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.6",
+		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
@@ -40,6 +40,7 @@
 		"@twurple/common": "^6.0.9",
 		"daisyui": "^2.51.5",
 		"elizabot": "^0.0.3",
-		"theme-change": "^2.5.0"
+		"theme-change": "^2.5.0",
+		"uuid": "^9.0.0"
 	}
 }
