--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
+		"svelte-adapter-deno": "^0.9.0",
 		"svelte-check": "^3.2.0",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.5.0",
