--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev --host",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --host",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -13,35 +13,37 @@
 	},
 	"devDependencies": {
 		"@steeze-ui/heroicons": "^2.2.2",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.15.4",
+		"@sveltejs/adapter-auto": "^2.0.1",
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/kit": "^1.15.9",
 		"@types/uuid": "^9.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.58.0",
-		"@typescript-eslint/parser": "^5.58.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
 		"autoprefixer": "^10.4.14",
-		"eslint": "^8.38.0",
+		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.7",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
 		"svelte-adapter-deno": "^0.9.0",
 		"svelte-check": "^3.2.0",
-		"tailwindcss": "^3.3.1",
+		"tailwindcss": "^3.3.2",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"vite": "^4.2.1"
+		"vite": "^4.3.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@steeze-ui/svelte-icon": "^1.3.2",
-		"@twurple/api": "^6.1.1",
-		"@twurple/auth": "^6.1.1",
-		"@twurple/chat": "^6.1.1",
-		"@twurple/common": "^6.1.1",
-		"daisyui": "^2.51.5",
+		"@twurple/api": "^6.2.0",
+		"@twurple/auth": "^6.2.0",
+		"@twurple/chat": "^6.2.0",
+		"@twurple/common": "^6.2.0",
+		"daisyui": "^2.51.6",
 		"elizabot": "^0.0.3",
+		"http-status-codes": "^2.2.0",
 		"theme-change": "^2.5.0",
 		"uuid": "^9.0.0"
 	}
