--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ node_modules
 /build
 /.svelte-kit
 /package
-.env
-.env.*
-!.env.example
+.env.local
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 /src/lib/config/config.ts
