--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@twurple/chat": "^6.2.0",
 		"@twurple/common": "^6.2.0",
 		"daisyui": "^2.51.6",
+		"deep-object-diff": "^1.1.9",
 		"elizabot": "^0.0.3",
 		"http-status-codes": "^2.2.0",
 		"theme-change": "^2.5.0",
