--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -2,14 +2,14 @@ name: 'publish'
 on:
   push:
     branches:
-      - release
+      - main
 
 jobs:
   publish-tauri:
     permissions:
       contents: write
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         platform: [macos-latest, ubuntu-20.04, windows-latest]
 
@@ -33,14 +33,17 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+      - name: Set short SHA
+        id: short-sha
+        run: echo "SHORT_SHA=$(git rev-parse --short ${{ github.sha }})" >> "$GITHUB_OUTPUT"
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
-          releaseName: 'Pepo v__VERSION__'
+          tagName: app-${{ steps.short-sha.outputs.SHORT_SHA }}
+          releaseName: 'Pepo v${{ steps.short-sha.outputs.SHORT_SHA }}'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: false
           prerelease: false
