--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -32,16 +32,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       - name: Set short SHA nix
-        id: short-sha
+        id: short-sha-nix
         run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
       - name: Set short SHA Windows
         if: matrix.platform == 'windows-latest'
-        id: short-sha
+        id: short-sha-windows
         run: echo echo "::set-output name=sha_short::$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
       - name: Sha check
-        run: echo ${{ steps.short-sha.outputs.SHORT_SHA }}
-      - uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+        run: echo "${{ steps.short-sha-nix.outputs.SHORT_SHA }}\t${{ steps.short-sha-windows.outputs.SHORT_SHA }}
