fix(build): short sha windows fix (#10)
* fix(build): short sha windows fix

* windows specific short sha step

* unique names

* update correct workflow ._.

* double jobs

* missing quote and double echo

* windows updates

* sha check id

* try shell bash

* remove old id

* add back build and update publish with working version

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -35,7 +35,11 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       - name: Set short SHA
         id: short-sha
-        run: echo "SHORT_SHA=$(git rev-parse --short ${{ github.sha }})" >> "$GITHUB_OUTPUT"
+        run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+        shell: bash
+      - name: Sha check
+        run: echo "${{ steps.short-sha.outputs.SHORT_SHA }}"
+        shell: bash
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
