--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@steeze-ui/heroicons": "^2.2.2",
+		"@steeze-ui/heroicons": "^2.2.3",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/kit": "^1.22.0",
 		"@types/uuid": "^9.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.60.0",
-		"@typescript-eslint/parser": "^5.60.0",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
 		"autoprefixer": "^10.4.14",
-		"daisyui": "^3.1.1",
-		"eslint": "^8.43.0",
+		"daisyui": "^3.1.9",
+		"eslint": "^8.44.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.32.2",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^3.59.1",
+		"svelte": "^4.0.4",
 		"svelte-adapter-deno": "^0.9.0",
-		"svelte-check": "^3.4.3",
+		"svelte-check": "^3.4.4",
 		"tailwindcss": "^3.3.2",
-		"tslib": "^2.5.3",
-		"typescript": "^4.9.5",
+		"tslib": "^2.6.0",
+		"typescript": "^5.1.6",
 		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@steeze-ui/svelte-icon": "^1.4.1",
+		"@steeze-ui/svelte-icon": "^1.5.0",
 		"@twurple/api": "^6.2.1",
 		"@twurple/auth": "^6.2.1",
 		"@twurple/chat": "^6.2.1",
