--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,27 +1,30 @@
-[package]
-name = "app"
-version = "0.11.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
-default-run = "app"
-edition = "2021"
-rust-version = "1.60"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
-tauri-build = { version = "1.5.2", features = [] }
+[build-dependencies.tauri-build]
+features = []
+version = "1.5.2"
 
 [dependencies]
 serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.5", features = ["updater"] }
-tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+[dependencies.serde]
+features = ["derive"]
+version = "1.0"
+[dependencies.tauri]
+features = ["updater"]
+version = "1.6.5"
+[dependencies.tauri-plugin-window-state]
+branch = "v1"
+git = "https://github.com/tauri-apps/plugins-workspace"
 
 [features]
-# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
-# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
-# DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
+
+[package]
+authors = ["you"]
+default-run = "app"
+description = "A Tauri App"
+edition = "2021"
+license = ""
+name = "app"
+repository = ""
+rust-version = "1.60"
+version = "0.11.2"
