fix(build:gha): install rust x86 target

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -45,6 +45,9 @@ jobs:
         with:
           workspaces: './src-tauri -> target'
 
+      - name: Install rust target
+        run: rustup target add x86_64-apple-darwin
+
       - name: install dependencies (ubuntu only)
         if: startsWith(matrix.platform, 'ubuntu')
         run: |
