--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pepo",
-	"version": "0.12.6",
+	"version": "0.12.7",
 	"private": true,
 	"scripts": {
 		"build": "vite build",
@@ -21,6 +21,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"autoprefixer": "^10.4.20",
+		"cookie": ">=0.7.0",
 		"daisyui": "^3.9.4",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
@@ -44,6 +45,7 @@
 		"@twurple/auth": "^6.2.1",
 		"@twurple/chat": "^6.2.1",
 		"@twurple/common": "^6.2.1",
+		"cookie": "^0.7.1",
 		"elizabot": "^0.0.3",
 		"http-status-codes": "^2.3.0",
 		"tauri-plugin-window-state-api": "github:tauri-apps/tauri-plugin-window-state#v1",
