--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
 		"preview": "vite preview --host"
 	},
 	"devDependencies": {
-		"@steeze-ui/heroicons": "^2.4.0",
+		"@steeze-ui/heroicons": "^2.4.2",
 		"@sveltejs/adapter-auto": "^2.1.1",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.30.4",
 		"@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
+		"@tauri-apps/cli": "^2.1.0",
 		"@types/uuid": "^9.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
@@ -25,22 +26,22 @@
 		"daisyui": "^3.9.4",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.45.1",
-		"postcss": "^8.4.47",
+		"eslint-plugin-svelte": "^2.46.1",
+		"postcss": "^8.4.49",
 		"postcss-import": "^15.1.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "5.0.0-next.252",
 		"svelte-adapter-deno": "^0.9.1",
 		"svelte-check": "^3.8.6",
-		"tailwindcss": "^3.4.14",
-		"tslib": "^2.8.0",
-		"typescript": "^5.6.3",
+		"tailwindcss": "^3.4.16",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
 		"vite": "^4.5.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@steeze-ui/svelte-icon": "^1.5.0",
+		"@steeze-ui/svelte-icon": "^1.6.2",
 		"@twurple/api": "^6.2.1",
 		"@twurple/auth": "^6.2.1",
 		"@twurple/chat": "^6.2.1",
