--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@tauri-apps/api": "^2",
-        "@tauri-apps/plugin-opener": "^2"
+        "@tailwindcss/vite": "^4.0.1",
+        "@tauri-apps/api": "^2.2.0",
+        "@tauri-apps/plugin-opener": "^2.2.5",
+        "@tauri-apps/plugin-window-state": "~2",
+        "tailwindcss": "^3"
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^3.0.6",
-        "@sveltejs/kit": "^2.9.0",
-        "@sveltejs/vite-plugin-svelte": "^5.0.0",
-        "svelte": "^5.0.0",
-        "svelte-check": "^4.0.0",
-        "typescript": "~5.6.2",
-        "vite": "^6.0.3",
-        "@tauri-apps/cli": "^2"
+        "@sveltejs/adapter-static": "^3.0.8",
+        "@sveltejs/kit": "^2.16.1",
+        "@sveltejs/vite-plugin-svelte": "^5.0.3",
+        "@tauri-apps/cli": "^2.2.7",
+        "clsx": "^2.1.1",
+        "svelte": "^5.19.6",
+        "svelte-check": "^4.1.4",
+        "tailwind-merge": "^3.0.1",
+        "tailwind-variants": "^0.3.1",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "~5.6.3",
+        "vite": "^6.0.11"
     }
 }
