--- a/.prettierrc
+++ b/.prettierrc
@@ -4,10 +4,8 @@
     "trailingComma": "none",
     "printWidth": 100,
     "plugins": [
-        "prettier-plugin-svelte"
-    ],
-    "pluginSearchDirs": [
-        "."
+        "prettier-plugin-svelte",
+        "prettier-plugin-tailwindcss"
     ],
     "overrides": [
         {
