--- a/package.json
+++ b/package.json
@@ -13,24 +13,36 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.1",
         "@tauri-apps/api": "^2.2.0",
         "@tauri-apps/plugin-opener": "^2.2.5",
-        "@tauri-apps/plugin-window-state": "~2",
-        "tailwindcss": "^3"
+        "@tauri-apps/plugin-window-state": "~2"
     },
     "devDependencies": {
+        "@eslint/compat": "^1.2.5",
+        "@eslint/js": "^9.18.0",
         "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.16.1",
-        "@sveltejs/vite-plugin-svelte": "^5.0.3",
+        "@sveltejs/kit": "^2.16.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
         "@tauri-apps/cli": "^2.2.7",
+        "autoprefixer": "^10.4.20",
+        "bits-ui": "1.0.0-next.82",
         "clsx": "^2.1.1",
-        "svelte": "^5.19.6",
-        "svelte-check": "^4.1.4",
+        "eslint": "^9.18.0",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-svelte": "^2.46.1",
+        "globals": "^15.14.0",
+        "lucide-svelte": "^0.474.0",
+        "prettier": "^3.4.2",
+        "prettier-plugin-svelte": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.10",
+        "svelte": "^5.0.0",
+        "svelte-check": "^4.0.0",
         "tailwind-merge": "^3.0.1",
         "tailwind-variants": "^0.3.1",
+        "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "~5.6.3",
-        "vite": "^6.0.11"
+        "typescript": "^5.0.0",
+        "typescript-eslint": "^8.20.0",
+        "vite": "^6.0.0"
     }
 }
