--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
 reqwest = "0.12.12"
 tauri-plugin-store = "2"
+futures = "0.3.31"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
