--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,10 @@ tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
 reqwest = "0.12.12"
 tauri-plugin-store = "2"
 futures = "0.3.31"
+eyre = "0.6.12"
+color-eyre = "0.6.3"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
@@ -39,3 +43,6 @@ tauri-plugin-window-state = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.26"
+
+[profile.dev.package.backtrace]
+opt-level = 3
