--- a/package.json
+++ b/package.json
@@ -13,37 +13,42 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@tauri-apps/api": "^2.2.0",
-        "@tauri-apps/plugin-opener": "^2.2.5",
+        "@tauri-apps/api": "^2.5.0",
+        "@tauri-apps/plugin-opener": "^2.2.6",
         "@tauri-apps/plugin-store": "~2.2.0",
-        "@tauri-apps/plugin-window-state": "~2.2.1"
+        "@tauri-apps/plugin-window-state": "~2.2.2"
     },
     "devDependencies": {
-        "@eslint/compat": "^1.2.7",
-        "@eslint/js": "^9.21.0",
+        "@eslint/compat": "^1.2.8",
+        "@eslint/js": "^9.25.1",
         "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.17.2",
+        "@sveltejs/kit": "^2.20.7",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
-        "@tauri-apps/cli": "^2.2.7",
-        "autoprefixer": "^10.4.20",
+        "@tauri-apps/cli": "^2.5.0",
+        "autoprefixer": "^10.4.21",
         "bits-ui": "1.0.0-next.84",
         "clsx": "^2.1.1",
-        "eslint": "^9.21.0",
-        "eslint-config-prettier": "^10.0.1",
+        "eslint": "^9.25.1",
+        "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-svelte": "^2.46.1",
         "globals": "^15.15.0",
         "lucide-svelte": "^0.474.0",
-        "prettier": "^3.5.2",
+        "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "svelte": "^5.20.4",
-        "svelte-check": "^4.1.4",
-        "tailwind-merge": "^3.0.2",
+        "svelte": "^5.28.2",
+        "svelte-check": "^4.1.6",
+        "tailwind-merge": "^3.2.0",
         "tailwind-variants": "^0.3.1",
         "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.7.3",
-        "typescript-eslint": "^8.25.0",
-        "vite": "^6.1.1"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.31.0",
+        "vite": "^6.3.3"
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild"
+        ]
     }
 }
