--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,7 +42,8 @@ tauri-plugin-single-instance = "2"
 tauri-plugin-window-state = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-cocoa = "0.26"
+objc2 = "0.6.2"
+objc2-app-kit = "0.3.1"
 
 [profile.dev.package.backtrace]
 opt-level = 3
