--- a/package.json
+++ b/package.json
@@ -21,29 +21,34 @@
     "devDependencies": {
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.31.0",
+        "@lucide/svelte": "^0.482.0",
         "@sveltejs/adapter-static": "^3.0.8",
         "@sveltejs/kit": "^2.25.1",
         "@sveltejs/vite-plugin-svelte": "^5.1.1",
         "@tauri-apps/cli": "^2.6.2",
         "autoprefixer": "^10.4.21",
-        "bits-ui": "1.0.0-next.84",
+        "bits-ui": "1.8.0",
         "clsx": "^2.1.1",
         "eslint": "^9.31.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-svelte": "^2.46.1",
         "globals": "^15.15.0",
-        "lucide-svelte": "^0.474.0",
+        "lucide-svelte": "^0.542.0",
+        "mode-watcher": "^1.1.0",
+        "paneforge": "1.0.0-next.6",
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "svelte": "^5.36.8",
         "svelte-check": "^4.3.0",
+        "svelte-sonner": "^1.0.5",
         "tailwind-merge": "^3.3.1",
-        "tailwind-variants": "^0.3.1",
+        "tailwind-variants": "^0.2.1",
         "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.37.0",
+        "vaul-svelte": "1.0.0-next.7",
         "vite": "^6.3.5"
     },
     "pnpm": {
