--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
         "@sveltejs/adapter-static": "^3.0.8",
         "@sveltejs/kit": "^2.25.1",
         "@sveltejs/vite-plugin-svelte": "^5.1.1",
+        "@tailwindcss/postcss": "^4.1.13",
+        "@tailwindcss/vite": "^4.1.13",
         "@tauri-apps/cli": "^2.6.2",
-        "autoprefixer": "^10.4.21",
         "bits-ui": "1.8.0",
         "clsx": "^2.1.1",
         "eslint": "^9.31.0",
@@ -44,7 +45,7 @@
         "svelte-sonner": "^1.0.5",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^0.2.1",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.13",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.37.0",
