--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     },
     "pnpm": {
         "onlyBuiltDependencies": [
+            "@tailwindcss/oxide",
             "esbuild"
         ]
     }
