--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
     "name": "pepo",
-    "version": "0.1.0",
-    "description": "",
-    "type": "module",
+    "version": "0.2.0",
+    "private": false,
     "scripts": {
-        "dev": "vite dev",
         "build": "vite build",
-        "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "dev": "vite dev",
+        "preview": "vite preview",
         "tauri": "tauri"
     },
-    "license": "MIT",
-    "dependencies": {
-        "@tauri-apps/api": "^2.6.0",
-        "@tauri-apps/plugin-opener": "^2.4.0",
-        "@tauri-apps/plugin-store": "~2.2.1",
-        "@tauri-apps/plugin-window-state": "~2.2.3",
-        "tauri-svelte-synced-store": "github:synthlabs/tauri-svelte-synced-store"
-    },
     "devDependencies": {
-        "@eslint/compat": "^1.3.1",
-        "@eslint/js": "^9.31.0",
+        "@eslint/compat": "^1.4.1",
+        "@eslint/js": "^9.39.1",
         "@lucide/svelte": "^0.482.0",
-        "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.25.1",
+        "@sveltejs/adapter-static": "^3.0.10",
+        "@sveltejs/kit": "^2.49.0",
         "@sveltejs/vite-plugin-svelte": "^5.1.1",
-        "@tailwindcss/postcss": "^4.1.13",
-        "@tailwindcss/vite": "^4.1.13",
-        "@tauri-apps/cli": "^2.6.2",
+        "@tailwindcss/postcss": "^4.1.17",
+        "@tailwindcss/vite": "^4.1.17",
+        "@tauri-apps/cli": "^2.9.4",
         "bits-ui": "1.8.0",
         "clsx": "^2.1.1",
-        "eslint": "^9.31.0",
+        "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-svelte": "^2.46.1",
         "globals": "^15.15.0",
@@ -41,22 +32,25 @@
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
-        "svelte": "^5.36.8",
-        "svelte-check": "^4.3.0",
-        "svelte-sonner": "^1.0.5",
-        "tailwind-merge": "^3.3.1",
+        "svelte": "^5.43.14",
+        "svelte-check": "^4.3.4",
+        "svelte-sonner": "^1.0.6",
+        "tailwind-merge": "^3.4.0",
         "tailwind-variants": "^0.2.1",
-        "tailwindcss": "^4.1.13",
+        "tailwindcss": "^4.1.17",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.8.3",
-        "typescript-eslint": "^8.37.0",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.47.0",
         "vaul-svelte": "1.0.0-next.7",
-        "vite": "^6.3.5"
+        "vite": "^6.4.1"
     },
-    "pnpm": {
-        "onlyBuiltDependencies": [
-            "@tailwindcss/oxide",
-            "esbuild"
-        ]
-    }
+    "type": "module",
+    "dependencies": {
+        "@tauri-apps/api": "^2.9.0",
+        "@tauri-apps/plugin-opener": "^2.5.2",
+        "@tauri-apps/plugin-store": "~2.2.1",
+        "@tauri-apps/plugin-window-state": "~2.2.3",
+        "tauri-svelte-synced-store": "github:synthlabs/tauri-svelte-synced-store"
+    },
+    "packageManager": "pnpm@10.22.0"
 }
