fix(updater): add back in the auto updater hook

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -83,6 +83,7 @@ jobs:
           releaseName: 'Pepo v${{ steps.short-sha.outputs.SHORT_SHA }}'
           releaseBody: |
             ${{ steps.sumry.outputs.FILE }}
+          includeUpdaterJson: true
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
