--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,7 +12,9 @@ reqwest = "0.12.12"
 serde_json = "1"
 specta = "=2.0.0-rc.22"
 specta-typescript = "0.0.9"
+tauri-plugin-dialog = "2"
 tauri-plugin-opener = "2"
+tauri-plugin-process = "2"
 tauri-plugin-store = "2"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
