--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "paneforge": "1.0.0-next.6",
         "prettier": "^3.7.4",
         "prettier-plugin-svelte": "^3.4.0",
-        "prettier-plugin-tailwindcss": "^0.6.14",
-        "svelte": "^5.45.5",
+        "prettier-plugin-tailwindcss": "^0.7.2",
+        "svelte": "^5.45.6",
         "svelte-check": "^4.3.4",
         "svelte-sonner": "^1.0.7",
         "tailwind-merge": "^3.4.0",
@@ -48,7 +48,9 @@
     "type": "module",
     "dependencies": {
         "@tauri-apps/api": "^2.9.1",
+        "@tauri-apps/plugin-dialog": "~2.4.2",
         "@tauri-apps/plugin-opener": "^2.5.2",
+        "@tauri-apps/plugin-process": "~2.3.1",
         "@tauri-apps/plugin-store": "^2.4.1",
         "@tauri-apps/plugin-updater": "^2.9.0",
         "@tauri-apps/plugin-window-state": "^2.4.1",
