fix(build): correctly tag release version

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -61,12 +61,12 @@ jobs:
         shell: bash
 
       - name: Set version id
-        id: version-id
+        id: tauri-version
         run: echo "VERSION=$(cat ./src-tauri/tauri.conf.json | grep version | cut -d\" -f 4)" >> "$GITHUB_OUTPUT"
         shell: bash
 
       - name: Var check
-        run: echo "SHORT_SHA=${{ steps.short-sha.outputs.SHORT_SHA }}, VERSION=${{ steps.short-sha.outputs.VERSION }}"
+        run: echo "SHORT_SHA=${{ steps.short-sha.outputs.SHORT_SHA }}, VERSION=${{ steps.tauri-version.outputs.VERSION }}"
         shell: bash
 
       - name: Read SUMRY file
@@ -84,8 +84,8 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: app-${{ steps.short-sha.outputs.VERSION }}-${{ steps.short-sha.outputs.SHORT_SHA }}
-          releaseName: 'Pepo v${{ steps.short-sha.outputs.VERSION }}-${{ steps.short-sha.outputs.SHORT_SHA }}'
+          tagName: app-${{ steps.tauri-version.outputs.VERSION }}-${{ steps.short-sha.outputs.SHORT_SHA }}
+          releaseName: 'Pepo v${{ steps.tauri-version.outputs.VERSION }}-${{ steps.short-sha.outputs.SHORT_SHA }}'
           releaseBody: |
             ${{ steps.sumry.outputs.FILE }}
           includeUpdaterJson: true
